--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,7 +7,7 @@ $font: (
 
 // Palette.
 $palette: (
-  primary:       #555e69,
+  primary:       yellow,
   secondary:     darken(#555e69, 15%),
   meta:          lighten(#555e69, 25%),
   border:        lighten(#555e69, 55%),
