--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,7 +1,7 @@
 
 // Font.
 $font: (
-  primary: ("Helvetica Rounded",sans-serif),
+  primary: ("Helvetica Rounded",Helvetica, sans-serif),
   monospace: (Consolas,Monaco,"Andale Mono","Ubuntu Mono",monospace)
 );
 
