--- a/assets/sass/imports/_header.scss
+++ b/assets/sass/imports/_header.scss
@@ -26,7 +26,7 @@
   -webkit-box-flex: 0;
   -ms-flex: 0 0 auto;
   flex: 0 0 auto;
-  margin: 0 10px 0 0;
+  margin: 0 10px 100px 0;
 
   a {
     border: 0;
